Adicionado à tabela evento saliente para chutar a bola

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -752,7 +752,7 @@ para acelerar a obtenção das soluções.
 |             | empurrar   | -        | V    |
 | botão B     | pressionar | \muoff\  | -    |
 |             | empurrar   | -        | V    |
-| bola        | chutar     |          | A    |
+| bola        | chutar     | -        | A    |
 | interruptor | pressionar | \lion    | -    |
 |             | pressionar | \lioff   | -    |
 | sino        | -          | \beon\   | V    |
