--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -601,7 +601,7 @@ botão A & pressionar & \muon\ & - \\
  & empurrar & - & V \\
 botão B & pressionar & \muoff\ & - \\
  & empurrar & - & V \\
-bola & chutar &  & A \\
+bola & chutar & - & A \\
 interruptor & pressionar & \lion & - \\
  & pressionar & \lioff & - \\
 sino & - & \beon\ & V \\
@@ -629,10 +629,10 @@ objetos marcados com \emph{A} movem-se para a posição atual do
 \emph{alvo} e as marcadas com \emph{V} para uma célula vizinha
 aleatória ao serem ativados.  Caso a \emph{bola} seja chutada com o
 \emph{alvo} sobre o \emph{sino}, este é ativado, disparando o evento
-\beon.  O \emph{alarme} dispara quando o ocorre \beon\ a luz está
-ligada e a música desligada simultaneamente e é desativado quando o
-estado da luz ou da música é modificado; o agente somente consegue
-diferenciar os botões e agir sobre eles se a luz estiver ligada.
+\beon.  O \emph{alarme} dispara quando ocorre \beon\ a luz está ligada
+e a música desligada simultaneamente e é desativado quando o estado da
+luz ou da música é modificado; o agente somente consegue diferenciar
+os botões e agir sobre eles se a luz estiver ligada.
 
 Para avaliar a técnica proposta, foram realizados dois experimentos,
 sendo que em um deles o módulo de obtenção de políticas parciais a
