Melhor descrição da relação ações dos botões/luz

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -632,7 +632,7 @@ aleatória ao serem ativados.  Caso a \emph{bola} seja chutada com o
 \beon.  O \emph{alarme} dispara quando, com a música ligada e a luz
 desligada, ocorre \beon\ e é desativado quando o estado da luz ou da
 música é modificado; o agente somente consegue diferenciar os botões e
-agir sobre eles se a luz estiver ligada.
+executar as ações associadas a eles se a luz estiver ligada.
 
 Para avaliar a técnica proposta, foram realizados dois experimentos,
 sendo que em um deles o módulo de obtenção de políticas parciais a
