Correção de ref de gráfico

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -649,7 +649,7 @@ pois este diminui o tempo necessário para a solução do problema com
 uma maior rapidez em relação ao agente que utiliza somente motivação
 extrínseca.
 
-No gráfico da Figura \ref{fig:mi} são apresentados os valores de
+No gráfico da Figura \ref{fig:ri} são apresentados os valores de
 recompensa intrínseca recebida por passo do experimento, evidenciando
 algumas características do aprendizado utilizando \mi : o agente
 inicialmente procede à execução das tarefas mais simples, como
