--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -669,8 +669,8 @@ utilizando Q-Learning e outro com comportamento aleatório e os
 resultados estão presentes na Figura \ref{fig:ep}, que apresenta a
 média cumulativa de ativações do \tmon\ por passo de experimento.  A
 análise do gráfico sugere que a utilização da técnica proposta para
-obtenção e aplicação de políticas parciais pode superar a utilzação de
-algoritmos que não utilizam políticas parciais.  Pode-se também
+obtenção e aplicação de políticas parciais pode superar a utilização
+de algoritmos que não utilizam políticas parciais.  Pode-se também
 perceber que o valor de \ep\ possui impacto significativo no
 aprendizado, sendo o desempenho apresentado diretamente proporcional
 ao valor de \ep.
