Troquei 5e5 por 500 mil

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -638,7 +638,7 @@ Para avaliar a técnica proposta, foram realizados dois experimentos,
 sendo que em um deles o módulo de obtenção de políticas parciais a
 partir de \mi\ foi desativado, ou seja, o agente somente receberia
 recompensas extrínsecas, sem a obtenção de políticas parciais.  Foram
-realizados 100 experimentos, de $5e5$ passos cada, com o agente
+realizados 100 experimentos, de 500 mil passos cada, com o agente
 recebendo uma recompensa extrínseca para ocorrência de \tmon\ no valor
 de 10 e recompensas intrínsecas para os demais eventos salientes no
 valor de 1.  Os resultados são apresentados no gráfico da Figura
