Melhor descrição para comparação experimental

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -711,8 +711,8 @@ estratégia proposta.  A aplicação das políticas parciais foi
 modificada de forma a permitir exploração interna, com a qual o agente
 poderia contornar uma eventual restritividade por parte da aplicação
 das políticas parciais.  Realizou-se uma comparação da técnica de
-aprendizado proposta frente a abordagens mais clássicas e
-comportamento aleatório.  Os resultados obtidos sugerem a
+aprendizado proposta frente a abordagens mais clássicas de aprendizado
+e comportamento aleatório.  Os resultados obtidos sugerem a
 aplicabilidade da técnica para acelerar o processo de aprendizado.
 Percebeu-se ainda que o parâmetro de exploração interna à política
 parcial possui impacto significativo no desempenho de aprendizado,
