--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -725,7 +725,7 @@ Conhecimento
 \cite{beirigo2012,bergamo2011accelerating,bogdan2013forward,da2011geometric,da2011navigation,koga2013speeding,matos2011simultaneous,matos2011stochastic},
 que busca acelerar o aprendizado do agente através do reuso de
 características compartilhadas entre problemas distintos.  Como
-trabalhos futuros, pretende-se a esteder o algoritmo para a solução de
+trabalhos futuros, pretende-se esteder o algoritmo para a solução de
 uma classe de problemas, em que os sub-problemas comuns são
 identificados e armazenados para uso futuro, dessa forma contribuindo
 para acelerar a obtenção das soluções.
