Melhorada a caption da tabela de objetos

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -586,8 +586,8 @@ aleatória dentre as possíveis para o estado atual.
 \section{Avaliação Experimental}
 O domínio utilizado na avaliação experimental foi o \emph{Playroom}
 \cite{imrl2004}, em que o agente se econtra em um reticulado
-$5\times5$ e deve descobrir como ativar um
-\emph{alarme} interagindo com objetos aí
+$5\times5$ e deve descobrir como ativar um \emph{alarme} interagindo
+com objetos aí
 %
 \begin{wrapfigure}{r}{0.45\textwidth}
   \newcommand{\fppt}{\fontsize{.295cm}{1em}\selectfont}
@@ -613,8 +613,7 @@ $5\times5$ e deve descobrir como ativar um
     \end{tabular}
     % END RECEIVE ORGTBL thenameofthetable
   \end{center}
-  \fppt
-  \caption{Objetos presentes no domínio com as correspondentes ações e eventos salientes}
+  \caption{\fppt \emph{Playroom}: objetos, ações e eventos salientes}
   \label{fig:obj}
 \end{wrapfigure}
 %
