Melhorado wrapfigure da tabela: removidos espaços verticais
\begin{wrapfigure}[lineheight]{position}{width}
                      ^
		      Essa propriedade

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -589,7 +589,7 @@ O domínio utilizado na avaliação experimental foi o \emph{Playroom}
 $5\times5$ e deve descobrir como ativar um \emph{alarme} interagindo
 com objetos aí
 %
-\begin{wrapfigure}{r}{0.45\textwidth}
+\begin{wrapfigure}[14]{r}{0.45\textwidth}
   \newcommand{\fppt}{\fontsize{.295cm}{1em}\selectfont}
   \fppt
   \begin{center}
