antes de por o alg

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -300,6 +300,10 @@ solução do problema original é realizada através da divisão deste em
 sub-problemas menores, cuja solução é obtida através do aprendizado de
 políticas parciais.
 
+A obtenção de políticas parciais pode ser realizada de forma
+automática simultaneamente à solução do problema original através do
+algoritmo proposto em \cite{imrl}, representado ao lado. 
+
 \section{Proposta}\label{sec:algoritmo}
 Políticas parciais podem ser obtidas automaticamente simultaneamente
 ao aprendizado através do algoritmo apresentado em \cite{imrl2004},
