--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -278,13 +278,12 @@ ação a ser executada em um estado e a função $V^{\pi}: S \rightarrow
 \mathcal{R}$ fornece o valor esperado de recompensas futuras ao,
 partindo de $s \in S$, executar $\pi$.  A solução de um PDM é dado
 pela política $\pi^* = \arg\max_{\pi}{V^{\pi}(s), \forall s \in S}$,
-denominada \emph{ótima}, que pode ser obtida através do Q-Learning
-\cite{qlearning}, uma técnica de Aprendizado por Reforço (AR). Nesse
-algoritmo, o a seleção da ações a serem executadas é feita pela
-estratégia $\epsilon$-gulosa, $\epsilon \in [0,1]$, que retorna ações
-aleatórias com probabilidade $\epsilon$ e gulosas com probabilidade $1
-- \epsilon$, configurando o compromisso
-\emph{exploração}/\emph{aplicação}.
+\emph{exploração}/\emph{aplicação}.  denominada \emph{ótima}, que pode
+ser obtida através do Q-Learning \cite{qlearning}, uma técnica de
+Aprendizado por Reforço (AR). Nesse algoritmo, o a seleção da ações a
+serem executadas é feita pela estratégia $\epsilon$-gulosa, $\epsilon
+\in [0,1]$, que retorna ações aleatórias com probabilidade $\epsilon$
+e gulosas com probabilidade $1 - \epsilon$, configurando o compromisso
 
 Por ser realizado através de tentativa e erro esse processo é
 geralmente lento e pode ser acelerado pela utilização de políticas
@@ -300,52 +299,59 @@ possui forte caráter \emph{hierárquico}, dado que a obtenção da
 solução do problema original é realizada através da divisão deste em
 sub-problemas menores, cuja solução é obtida através do aprendizado de
 políticas parciais.
+%
+\vspace{1pt}
+\setlength\intextsep{2pt}
+\begin{wrapfigure}[12]{l}{0.5\textwidth}
+  \begin{minipage}{0.5\textwidth}
+    \begin{center}
+      \begin{algorithm}[H]
+        \caption{\imrl}
+        \label{alg:imrl}
+        \algsetup{indent=1em}
+        \small
+        \begin{algorithmic}[1]
+          \newcommand{\sd}{s_{t+1}}
+          \newcommand{\bo}[1]{$\beta^o(#1)$}
+          \newcommand{\ubo}[1]{$1\ -\ $\bo{#1}}
+          \newcommand{\tv}{\tr{valor terminal para a política parcial $o$}}
+          \newcommand{\maxao}[1]{$\max_{a \in A \cup O}{#1}$}
+          \newcommand{\maos}{\maxao{Q^o(\sd,\ a)}}
+          \newcommand{\maox}{\maxao{Q^o(x,\ a)}}
+          \newcommand{\aalpha}{$\xleftarrow{\alpha}$}
+          \newcommand{\termoA}{\bo{\sd}$v$}
+          \newcommand{\termoB}{[\ubo{\sd}][\maos]}
+          \newcommand{\termoC}{\bo{x}$v$}
+          \newcommand{\termoD}{$[$\ubo{x}$][$\maox$]$}
+          \newcommand{\transita}[1]{$#1_t \leftarrow #1_{t+1}$}
 
-A obtenção de políticas parciais pode ser realizada de forma
-automática simultaneamente à solução do problema original através do
-algoritmo proposto em \cite{imrl}, representado ao lado. 
-
-\begin{wrapfigure}[14]{r}{0.45\textwidth}
-  \newcommand{\fppt}{\fontsize{.295cm}{1em}\selectfont}
-  \fppt
-  \begin{center}
-    % BEGIN RECEIVE ORGTBL thenameofthetable
-    \begin{algorithm}
-      \caption{\imrl}
-      \label{alg:armipep}
-      \algsetup{indent=2em}
-      \small
-      \begin{algorithmic}[1]
-        \newcommand{\sd}{s_{t+1}}
-        \newcommand{\bo}[1]{$\beta^o(#1)$}
-        \newcommand{\ubo}[1]{$1\ -\ $\bo{#1}}
-        \newcommand{\tv}{\tr{valor terminal para a política parcial $o$}}
-        \newcommand{\maxao}[1]{$\max_{a \in A \cup O}{#1}$}
-        \newcommand{\maos}{\maxao{Q^o(\sd,\ a)}}
-        \newcommand{\maox}{\maxao{Q^o(x,\ a)}}
-        \newcommand{\aalpha}{$\xleftarrow{\alpha}$}
-        \newcommand{\termoA}{\bo{\sd}$v$}
-        \newcommand{\termoB}{[\ubo{\sd}][\maos]}
-        \newcommand{\termoC}{\bo{x}$v$}
-        \newcommand{\termoD}{$[$\ubo{x}$][$\maox$]$}
-        \newcommand{\transita}[1]{$#1_t \leftarrow #1_{t+1}$}
-
-        \REQUIRE{Inicializar $s_t,\ a_t,\ $\grifar{$o_t$}$,\ r^e_t,\ r^i_t$}
-        \REPEAT
-        \STATE\COMMENT{Obter $\sd$, $r^e_{t+1}$ por $s_t,\ a_t \rightarrow s_{t+1}$}
-        \STATE\COMMENT{Tratar Ocorrência de Evento Saliente}
-        \STATE\COMMENT{Atualizar Modelo das Políticas Parciais}
-        \STATE\COMMENT{Atualizar Função-Valor (Q-Learning)}
-        \STATE\COMMENT{Atualizar Funções-Valor (Políticas Parciais)}
-        \STATE\COMMENT{Obter $a_{t+1}$ (estratégia $\epsilon$-gulosa )}
-        \STATE \transita{s}; \transita{a}; \transita{r^e}; \transita{r^i}
-        \UNTIL{condição de parada}
-      \end{algorithmic}
-    \end{algorithm}
-  \end{center}
-  \caption{\fppt \emph{Playroom}: objetos, ações e eventos salientes}
-  \label{fig:obj}
+          \REQUIRE{Inicializar $s_t,\ a_t,\ $$o_t$$,\ r^e_t,\ r^i_t$}
+          \REPEAT
+          \STATE\COMMENT{Obter $\sd$, $r^e_{t+1}$ por $s_t,\ a_t \rightarrow s_{t+1}$}
+          \STATE\COMMENT{Tratar Ocorrência de Evento Saliente}
+          \STATE\COMMENT{Atualizar Modelo das Políticas Parciais}
+          \STATE\COMMENT{Atualizar Função-Valor (Q-Learning)}
+          \STATE\COMMENT{Atualizar Funções-Valor (Políticas Parciais)}
+          \STATE\COMMENT{Obter $a_{t+1}$ (estratégia $\epsilon$-gulosa )}
+          \STATE \transita{s}; \transita{a}; \transita{r^e}; \transita{r^i}
+          \UNTIL{condição de parada}
+        \end{algorithmic}
+      \end{algorithm}
+    \end{center}
+  \end{minipage}
 \end{wrapfigure}
+~~A obtenção de políticas parciais pode ser realizada de forma
+automática simultaneamente à solução do problema original através da
+utilização de motivação intrínseca para identificação de sub-tarefas e
+correspondente aprendizado de políticas parciais.  O algoritmo
+proposto em \cite{imrl2004}, representado ao lado, implementa o
+conceito de \emph{recompensas intrínsecas}, que são recebidas quando
+ocorrem variações significativas de determinados atributos presentes
+da descrição fatorada do estado, sendo denominados \emph{atributos
+    salientes} e a ocorrência da variação denominada \emph{evento
+    saliente}, sendo o conceito utilizado para a obtenção, atualização
+a aplicação do modelo e função valor das políticas parciais pelo
+técnica.
 
 \section{Proposta}\label{sec:algoritmo}
 Políticas parciais podem ser obtidas automaticamente simultaneamente
